--- a/configs/promtail/promtail.yml
+++ b/configs/promtail/promtail.yml
@@ -9,6 +9,39 @@ clients:
   - url: http://192.168.10.18:3100/loki/api/v1/push
 
 scrape_configs:
+  # Collect Docker container logs for Speedtest Exporters
+  - job_name: docker-speedtest
+    docker_sd_configs:
+      - host: unix:///var/run/docker.sock
+        refresh_interval: 5s
+        filters:
+          - name: label
+            values: ["service=speedtest-exporter"]
+    relabel_configs:
+      - source_labels: ['__meta_docker_container_name']
+        target_label: 'container_name'
+      - source_labels: ['__meta_docker_container_label_instance']
+        target_label: 'instance'
+      - source_labels: ['__meta_docker_container_label_service']
+        target_label: 'service'
+      - source_labels: ['__meta_docker_container_id']
+        target_label: 'container_id'
+        regex: '(.{12})'
+        replacement: '${1}'
+      - source_labels: ['__meta_docker_container_log_stream']
+        target_label: 'stream'
+    pipeline_stages:
+      - json:
+          expressions:
+            output: log
+            stream: stream
+            time: time
+      - timestamp:
+          source: time
+          format: RFC3339Nano
+      - output:
+          source: output
+
   # Collect system logs from /var/log
   - job_name: system
     static_configs:
