--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,8 +80,8 @@ services:
     network_mode: host
     volumes:
       - ./configs/promtail/promtail.yml:/etc/promtail/promtail.yml:ro
-      - /var/log:/var/log:ro
-      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/log:/var/log:ro,z
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro,z
       - /var/run/docker.sock:/var/run/docker.sock:ro
     command:
       - --config.file=/etc/promtail/promtail.yml
