--- a/configs/promtail/promtail.yml
+++ b/configs/promtail/promtail.yml
@@ -45,6 +45,10 @@ scrape_configs:
         target_label: 'stream'
     pipeline_stages:
       - docker: {}
+      - timestamp:
+          source: datetime
+          format: '2006-01-02 15:04:05,000'
+          location: Asia/Ho_Chi_Minh
 
  
 
