--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -143,89 +143,7 @@ scrape_configs:
           line: 'WAN8'
 
   # Speedtest Japan monitoring - staggered intervals to avoid conflicts
-  - job_name: 'speedtest-japan-wan1'
-    scrape_interval: 38m
-    scrape_timeout: 8m
-    static_configs:
-      - targets: ['192.168.10.18:9806']
-        labels:
-          gateway: 'GW1'
-          line: 'WAN1'
-          region: 'japan'
 
-  - job_name: 'speedtest-japan-wan2'
-    scrape_interval: 39m
-    scrape_timeout: 8m
-    static_configs:
-      - targets: ['192.168.10.18:9807']
-        labels:
-          gateway: 'GW2'
-          gateway1: 'GW5'
-          line: 'WAN2'
-          region: 'japan'
-
-  - job_name: 'speedtest-japan-wan3'
-    scrape_interval: 40m
-    scrape_timeout: 8m
-    static_configs:
-      - targets: ['192.168.10.18:9808']
-        labels:
-          gateway: 'GW2'
-          gateway1: 'GW5'
-          line: 'WAN3'
-          region: 'japan'
-
-  - job_name: 'speedtest-japan-wan4'
-    scrape_interval: 41m
-    scrape_timeout: 8m
-    static_configs:
-      - targets: ['192.168.10.18:9809']
-        labels:
-          gateway: 'GW4'
-          line: 'WAN4'
-          region: 'japan'
-
-  - job_name: 'speedtest-japan-wan5'
-    scrape_interval: 42m
-    scrape_timeout: 8m
-    static_configs:
-      - targets: ['192.168.10.18:9810']
-        labels:
-          gateway: 'GW4'
-          line: 'WAN5'
-          region: 'japan'
-
-  - job_name: 'speedtest-japan-wan6'
-    scrape_interval: 43m
-    scrape_timeout: 8m
-    static_configs:
-      - targets: ['192.168.10.18:9811']
-        labels:
-          gateway: 'GW4'
-          gateway1: 'GW5'
-          line: 'WAN6'
-          region: 'japan'
-
-  - job_name: 'speedtest-japan-wan7'
-    scrape_interval: 44m
-    scrape_timeout: 8m
-    static_configs:
-      - targets: ['192.168.10.18:9812']
-        labels:
-          gateway: 'GW4'
-          gateway1: 'GW5'
-          line: 'WAN7'
-          region: 'japan'
-
-  - job_name: 'speedtest-japan-wan8'
-    scrape_interval: 45m
-    scrape_timeout: 8m
-    static_configs:
-      - targets: ['192.168.10.18:9813']
-        labels:
-          gateway: 'GW5'
-          line: 'WAN8'
-          region: 'japan'
 
   # Omada Controller Exporter
   - job_name: 'omada-exporter'
@@ -233,3 +151,143 @@ scrape_configs:
     scrape_timeout: 9s
     static_configs:
       - targets: ['192.168.10.18:9202']
+
+  # iPerf3 Exporter v2 - WAN1 (Enhanced by ThanhDeptr)
+  - job_name: 'iperf3-exporter-v2-wan1'
+    scrape_interval: 3m
+    scrape_timeout: 40s
+    metrics_path: '/probe'
+    params:
+      target: ['192.168.10.175']
+      bidirectional: ['true']
+      bind_address: ['192.168.10.160']
+      parallel: ['2']
+      period: ['30s']
+    static_configs:
+      - targets: ['192.168.10.18:9579']
+        labels: 
+          wan: 'WAN1'
+          region: 'japan'
+
+
+  # iPerf3 Exporter v2 - WAN2
+  - job_name: 'iperf3-exporter-v2-wan2'
+    scrape_interval: 3m
+    scrape_timeout: 40s
+    metrics_path: '/probe'
+    params:
+      target: ['192.168.10.175']
+      bidirectional: ['true']
+      bind_address: ['192.168.10.161']
+      parallel: ['2']
+      period: ['30s']
+    static_configs:
+      - targets: ['192.168.10.18:9579']
+        labels:
+          wan: 'WAN2'
+          region: 'japan'
+
+  # iPerf3 Exporter v2 - WAN3
+  - job_name: 'iperf3-exporter-v2-wan3'
+    scrape_interval: 3m
+    scrape_timeout: 40s
+    metrics_path: '/probe'
+    params:
+      target: ['192.168.10.175']
+      bidirectional: ['true']
+      bind_address: ['192.168.10.162']
+      parallel: ['2']
+      period: ['30s']
+    static_configs:
+      - targets: ['192.168.10.18:9579']
+        labels:
+          wan: 'WAN3'
+          region: 'japan'
+
+  # iPerf3 Exporter v2 - WAN4
+  - job_name: 'iperf3-exporter-v2-wan4'
+    scrape_interval: 3m
+    scrape_timeout: 40s
+    metrics_path: '/probe'
+    params:
+      target: ['192.168.10.175']
+      bidirectional: ['true']
+      bind_address: ['192.168.10.163']
+      parallel: ['2']
+      period: ['30s']
+    static_configs:
+      - targets: ['192.168.10.18:9579']
+        labels:
+          wan: 'WAN4'
+          region: 'japan'
+
+  # iPerf3 Exporter v2 - WAN5
+  - job_name: 'iperf3-exporter-v2-wan5'
+    scrape_interval: 3m
+    scrape_timeout: 40s
+    metrics_path: '/probe'
+    params:
+      target: ['192.168.10.175']
+      bidirectional: ['true']
+      bind_address: ['192.168.10.164']
+      parallel: ['2']
+      period: ['30s']
+    static_configs:
+      - targets: ['192.168.10.18:9579']
+        labels:
+          wan: 'WAN5'
+          region: 'japan'
+
+  # iPerf3 Exporter v2 - WAN6
+  - job_name: 'iperf3-exporter-v2-wan6'
+    scrape_interval: 3m
+    scrape_timeout: 40s
+    metrics_path: '/probe'
+    params:
+      target: ['192.168.10.175']
+      bidirectional: ['true']
+      bind_address: ['192.168.10.165']
+      parallel: ['2']
+      period: ['30s']
+    static_configs:
+      - targets: ['192.168.10.18:9579']
+        labels:
+          wan: 'WAN6'
+          region: 'japan'
+
+  # iPerf3 Exporter v2 - WAN7
+  - job_name: 'iperf3-exporter-v2-wan7'
+    scrape_interval: 3m
+    scrape_timeout: 40s
+    metrics_path: '/probe'
+    params:
+      target: ['192.168.10.175']
+      bidirectional: ['true']
+      bind_address: ['192.168.10.166']
+      parallel: ['2']
+      period: ['30s']
+    static_configs:
+      - targets: ['192.168.10.18:9579']
+        labels:
+          wan: 'WAN7'
+          region: 'japan'
+
+  # iPerf3 Exporter v2 - WAN8
+  - job_name: 'iperf3-exporter-v2-wan8'
+    scrape_interval: 3m
+    scrape_timeout: 40s
+    metrics_path: '/probe'
+    params:
+      target: ['192.168.10.175']
+      bidirectional: ['true']
+      bind_address: ['192.168.10.167']
+      parallel: ['2']
+      period: ['30s']
+    static_configs:
+      - targets: ['192.168.10.18:9579']
+        labels:
+          wan: 'WAN8'
+          region: 'japan'
+
+
+
